[gd_scene load_steps=4 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBox_button"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.8, 0.8, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBox_button_hover"]
bg_color = Color(0, 0.3, 0.3, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBox_button_pressed"]
bg_color = Color(0, 0.5, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(0, 1, 1, 1)
outline_size = 4
outline_color = Color(0, 0.3, 0.3, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 18
font_color = Color(0.7, 0.7, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font_size = 24
font_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.03, 0.03, 0.08, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "NEON PROTOCOL"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "Cyberpunk Action-RPG"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
theme_override_styles/pressed = SubResource("StyleBox_button_pressed")
text = "▶ JOUER"

[node name="OptionsButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
theme_override_styles/pressed = SubResource("StyleBox_button_pressed")
text = "⚙ OPTIONS"

[node name="AccessibilityButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
theme_override_styles/pressed = SubResource("StyleBox_button_pressed")
text = "♿ ACCESSIBILITÉ"

[node name="QuitButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
theme_override_styles/pressed = SubResource("StyleBox_button_pressed")
text = "✕ QUITTER"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
text = "v0.1.0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="VBox/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBox/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBox/AccessibilityButton" to="." method="_on_accessibility_pressed"]
[connection signal="pressed" from="VBox/QuitButton" to="." method="_on_quit_pressed"]
